--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ dj-database-url==0.4.2
 Django==1.11.4
 django-admin==1.0.4
 django-filter==1.0.4
+django-location-field==2.0.3
 djangorestframework==3.6.4
 djangorestframework-jwt==1.11.0
 drf-writable-nested==0.3.0
@@ -16,5 +17,6 @@ pycparser==2.18
 PyJWT==1.5.2
 python-decouple==3.1
 pytz==2017.2
+rest-condition==1.0.3
 six==1.10.0
 whitenoise==3.3.0
