--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 bcrypt==3.1.3
+certifi==2017.7.27.1
 cffi==1.10.0
+chardet==3.0.4
 dj-database-url==0.4.2
 Django==1.11.4
 django-admin==1.0.4
@@ -9,6 +11,7 @@ djangorestframework==3.6.4
 djangorestframework-jwt==1.11.0
 drf-writable-nested==0.3.0
 gunicorn==19.7.1
+idna==2.6
 Markdown==2.6.9
 olefile==0.44
 Pillow==4.2.1
@@ -17,6 +20,8 @@ pycparser==2.18
 PyJWT==1.5.2
 python-decouple==3.1
 pytz==2017.2
+requests==2.18.4
 rest-condition==1.0.3
 six==1.10.0
+urllib3==1.22
 whitenoise==3.3.0
