--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ cffi==1.10.0
 chardet==3.0.4
 dj-database-url==0.4.2
 Django==1.11.4
-django-admin==1.0.4
+django-admin>=1.0.4
 django-filter==1.0.4
 django-location-field==2.0.3
 djangorestframework==3.6.4
