--- a/newrelic.ini
+++ b/newrelic.ini
@@ -33,7 +33,7 @@ license_key = 5e4c0c062858c33b9548824463fd073334e8fe00
 # application as you would like it to show up in New Relic UI.
 # The UI will then auto-map instances of your application into a
 # entry on your home dashboard page.
-app_name = Python Application
+app_name = meetme
 
 # When "true", the agent collects performance data about your
 # application and reports this data to the New Relic UI at
@@ -197,7 +197,7 @@ monitor_mode = false
 monitor_mode = false
 
 [newrelic:staging]
-app_name = Python Application (Staging)
+app_name = meetme (Staging)
 monitor_mode = true
 
 [newrelic:production]
