add django cron

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ chardet==3.0.4
 dj-database-url==0.4.2
 Django==1.11.4
 django-admin==1.0.4
+django-crontab==0.7.1
 django-filter==1.0.4
 django-location-field==2.0.3
 djangorestframework==3.6.4
@@ -13,6 +14,7 @@ drf-writable-nested==0.3.0
 gunicorn==19.7.1
 idna==2.6
 Markdown==2.6.9
+newrelic==2.92.0.78
 olefile==0.44
 Pillow==4.2.1
 psycopg2==2.7.3.1
