--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ psycopg2==2.7.3.1
 pycparser==2.18
 PyJWT==1.5.2
 python-decouple==3.1
+python-gcm==0.4
 pytz==2017.2
 requests==2.18.4
 rest-condition==1.0.3
